--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "postinstall": "npx prisma generate",
     "server": "nodemon server.js",
     "dev": "nodemon server.js",
     "start": "node server.js"
@@ -13,15 +14,21 @@
   "author": "Dedicated Daya Pal",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.7.53",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "^6.19.0",
     "@prisma/config": "^7.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "inngest": "^3.46.0",
     "multer": "^2.0.2",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11"
   }
 }
