--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/express": "^1.7.53",
+    "@imagekit/nodejs": "^7.1.1",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "^6.19.0",
