--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "inngest": "^3.46.0",
     "multer": "^2.0.2",
     "prisma": "^6.19.0",
